Implement exact DoJa SJIS_i charset support